# Lab-Programmazione

./: Activity.cpp  Activity.h  CMakeLists.txt  ConsoleDisplay.h  Observer.cpp  Observer.h  README.md  Subject.h  TodoList.cpp  TodoList.h  main.cpp
Test/: CMakeLists.txt  MockObserver.h  TodoListTest.cpp  runAllTests.cpp
